samples/_failures_safe/1761372055_8c1cf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ab762e9.c: In function ‘main’:
./samples/SAFE/__tmp_7ab762e9.c:146:54: error: expected ‘)’ at end of input
  146 |     printf("Compressed size: %zu bytes\n", compressed
      |           ~                                          ^
      |                                                      )
./samples/SAFE/__tmp_7ab762e9.c:146:5: error: expected declaration or statement at end of input
  146 |     printf("Compressed size: %zu bytes\n", compressed
      |     ^~~~~~
